<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EmailPasswordActivity">

        <ImageView
            android:id="@+id/firebase_logo"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/descriptionlogin"
            android:src="@drawable/firebase" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/firebase_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/Title"
            android:textColor="@color/purple_200"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/subTitle"
            android:textColor="@color/purple_200"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sub_title"
            android:layout_alignParentBottom="true"
            android:gravity="bottom">

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <EditText
                    android:id="@+id/emailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_email"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textPostalAddress" />

                <EditText
                    android:id="@+id/passText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_lock"
                    android:ems="10"
                    android:hint="@string/pass"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/card_edit_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout"
                android:layout_marginTop="30dp"
                android:gravity="center">

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/loginBTN"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/singUpButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/signupBTN"
                    android:textColor="@color/black" />
            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>

</layout>