<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="card"
            type="projeto.cards.Card" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@{card.date.substring(0,10)}"
            android:textColor="@color/purple_200" />

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/question_label"
            android:textColor="@color/purple_200"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:hint="@string/card_question_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/questionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{card.question}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_label"
            android:textColor="@color/purple_200"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:hint="@string/card_answer_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/answerEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{card.answer}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/card_edit_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <Button
                android:id="@+id/cancel_card_edit_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_card_edit_button_title"
                android:textColor="@color/design_default_color_error" />

            <Button
                android:id="@+id/accept_card_edit_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_card_edit_button_title"
                android:textColor="@color/teal_700" />
        </com.google.android.material.button.MaterialButtonToggleGroup>
    </LinearLayout>

</layout>